consistent maps (god damnit java)