@@ -10,11 +10,13 @@ import software.amazon.awscdk.services.applicationautoscaling.EnableScalingProps
 import software.amazon.awscdk.services.applicationautoscaling.ScalingInterval;
 import software.amazon.awscdk.services.cloudwatch.Metric;
 import software.amazon.awscdk.services.cloudwatch.MetricProps;
-import software.amazon.awscdk.services.ec2.*;
+import software.amazon.awscdk.services.ec2.ISecurityGroup;
+import software.amazon.awscdk.services.ec2.SubnetSelection;
+import software.amazon.awscdk.services.ec2.SubnetType;
 import software.amazon.awscdk.services.ecr.IRepository;
 import software.amazon.awscdk.services.ecs.*;
-import software.amazon.awscdk.services.ecs.Protocol;
-import software.amazon.awscdk.services.iam.*;
+import software.amazon.awscdk.services.iam.IRole;
+import software.amazon.awscdk.services.iam.Role;
 import software.amazon.awscdk.services.logs.RetentionDays;
 import software.amazon.awscdk.services.route53.IHostedZone;
 import software.amazon.awscdk.services.s3.BlockPublicAccess;
@@ -22,8 +24,10 @@ import software.amazon.awscdk.services.s3.Bucket;
 import software.amazon.awscdk.services.s3.BucketEncryption;
 import software.amazon.awscdk.services.s3.BucketProps;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.TreeMap;
 
 public class FactorioServer extends Construct {
     public FactorioServer(@NotNull Construct scope, @NotNull String id,
@@ -58,18 +62,18 @@ public class FactorioServer extends Construct {
         var container = taskDefinition.addContainer("container",
                 ContainerDefinitionOptions.builder()
                         .cpu(512)
-                        .environment(Map.of(
-                                "S3_BUCKET", bucket.getBucketName(),
-                                "HOSTED_ZONE", hostedZone.getHostedZoneId(),
-                                "DOMAIN", subDomain + "." + domainName,
-                                "SERVER_NAME", serverName
-                        ))
+                        .environment(new TreeMap<>() {{
+                            put("S3_BUCKET", bucket.getBucketName());
+                            put("HOSTED_ZONE", hostedZone.getHostedZoneId());
+                            put("DOMAIN", subDomain + "." + domainName);
+                            put("SERVER_NAME", serverName);
+                        }})
                         .essential(true)
                         .healthCheck(HealthCheck.builder()
                                 .command(List.of("CMD-SHELL", "cat /opt/factorio/server.pid"))
                                 .build()
                         )
-                        .dockerLabels(Map.of(
+                        .dockerLabels(Collections.singletonMap(
                                 "version", version
                         ))
                         .image(containerImage)
